// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Information. Snapshots > Default 1`] = `
<div>
  <div
    class="_Information_45e775"
    data-testid="information"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info _Icon_45e775"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div
      class="_Text_45e775"
    >
      <p>
        Lorem ipsum dolor sit 
        <b>
          amet consectetur
        </b>
         adipisicing elit. Exercitationem non enim rerum voluptatum quae consequatur dolor, id maiores culpa. Ratione!
      </p>
      <p>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae asperiores accusantium adipisci minima dolore. Optio eum excepturi nostrum at deleniti, quae hic provident aspernatur autem nemo assumenda officia dolores expedita voluptas dolorem similique illo consectetur! Veritatis, pariatur fuga accusamus explicabo soluta voluptas et voluptate sit consequuntur iste placeat quis.
      </p>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eos consequuntur a culpa molestias iure et, illo dolore, explicabo assumenda dolor odit animi similique quasi?
      </p>
    </div>
  </div>
</div>
`;

exports[`Information. Snapshots > WithCustomClassName 1`] = `
<div>
  <div
    class="_Information_45e775 color-success"
    data-testid="custom-test-id"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info _Icon_45e775"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div
      class="_Text_45e775"
    >
      <p>
        Lorem ipsum dolor sit 
        <b>
          amet consectetur
        </b>
         adipisicing elit. Exercitationem non enim rerum voluptatum quae consequatur dolor, id maiores culpa. Ratione!
      </p>
      <p>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae asperiores accusantium adipisci minima dolore. Optio eum excepturi nostrum at deleniti, quae hic provident aspernatur autem nemo assumenda officia dolores expedita voluptas dolorem similique illo consectetur! Veritatis, pariatur fuga accusamus explicabo soluta voluptas et voluptate sit consequuntur iste placeat quis.
      </p>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eos consequuntur a culpa molestias iure et, illo dolore, explicabo assumenda dolor odit animi similique quasi?
      </p>
    </div>
  </div>
</div>
`;
